[gd_scene load_steps=12 format=3 uid="uid://0h08en1f6gqc"]

[ext_resource type="Script" path="res://altare/script/altare.gd" id="1_a5ybs"]
[ext_resource type="Texture2D" uid="uid://cepit1b3crehm" path="res://levels/credits/Credits/Claudio.png" id="2_l38a6"]
[ext_resource type="PackedScene" uid="uid://bp55k82sv4ufj" path="res://interactable/interactable.tscn" id="3_h4y86"]
[ext_resource type="Texture2D" uid="uid://dajgyvjefmeg4" path="res://levels/credits/Credits/Kevin.png" id="3_wfc0d"]
[ext_resource type="FontFile" uid="uid://j1vfrfh8ab2q" path="res://resource/fonts/KGMidnightMemories.ttf" id="4_p6onx"]
[ext_resource type="AudioStream" uid="uid://c2xy14ppklklp" path="res://audio/sfx/various/sfx_thunder.ogg" id="6_i0vui"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kvnnh"]
radius = 129.124

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sldx2"]
size = Vector2(162, 163)

[sub_resource type="Animation" id="Animation_mknb1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_vg5m2"]
resource_name = "thunder"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 5.9, 6.76667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5y5is"]
_data = {
"RESET": SubResource("Animation_mknb1"),
"thunder": SubResource("Animation_vg5m2")
}

[node name="Altare" type="Node2D"]
script = ExtResource("1_a5ybs")

[node name="Sprite_empty" type="Sprite2D" parent="."]
texture = ExtResource("2_l38a6")

[node name="Sprite_object" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_wfc0d")

[node name="Interactable" parent="." instance=ExtResource("3_h4y86")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_kvnnh")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -63.0
offset_top = -190.0
offset_right = 80.0
offset_bottom = -155.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_p6onx")
theme_override_font_sizes/font_size = 30
text = "Place objects"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1, -3.5)
shape = SubResource("RectangleShape2D_sldx2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CutsceneLightChange")
libraries = {
"": SubResource("AnimationLibrary_5y5is")
}

[node name="CutsceneLightChange" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="CutsceneLightChange"]

[node name="ColorRect" type="ColorRect" parent="CutsceneLightChange/CanvasLayer"]
offset_right = 2109.0
offset_bottom = 1358.0
color = Color(0, 0, 0, 0)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CutsceneLightChange"]
stream = ExtResource("6_i0vui")

[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="player_enter" from="Interactable" to="." method="_on_interactable_player_enter"]
[connection signal="player_exit" from="Interactable" to="." method="_on_interactable_player_exit"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
